[package]
name = "slave_bin"
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
tokio = {version = "1.7",features = ["full","tracing"]}
tokio-util = { version = "0.7.11", features = ["codec"] }
mini-redis = "0.4"
futures-channel = "0.3.30"
rust_gpiozero = "0.2.1"
slaveapi ={ path = "../slaveapi"}
tokio-serial = "5.4.4"
futures = "0.3.30"
bytes = "1.7.1"
serde-hex = "0.1.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_derive = "1.0.210"
defaults = "0.2.0"
hex = "0.4.3"
