[package]
name = "slaveapi"
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
bytes = "1.7.1"
defaults = "0.2.0"
hex = "0.4.3"
serde = "1.0.210"
serde_derive = "1.0.210"
serde_with = "3.9.0"
tokio-util = "0.7.12"
